--- a/ParaRegalar.html
+++ b/ParaRegalar.html
@@ -54,77 +54,122 @@
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/regalar/03002a49.png" alt="">
                     <h2 class="titulo-producto">Stitch</h2>
-                    <p class="descripcion-producto">Descripción del Producto 1.</p>
-                </li>
-                <li class="producto">
-                    <img class="imagen-tarjeta" src="./imagenes/regalar/20210727_170759.jpg" alt="">
-                    <h2 class="titulo-producto">Ululette</h2>
-                    <p class="descripcion-producto">Descripción del Producto 2.</p>
-                </li>
-                <li class="producto">
-                    <img class="imagen-tarjeta" src="./imagenes/regalar/20210727_170829.jpg" alt="">
-                    <h2 class="titulo-producto">Gekko</h2>
-                    <p class="descripcion-producto">Descripción del Producto 3.</p>
-                </li>
-                <li class="producto">
-                    <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20210203_101545164.jpg" alt="">
-                    <h2 class="titulo-producto">Los 3 chanchitos</h2>
-                    <p class="descripcion-producto">Descripción del Producto 4.</p>
-                </li>
-                <li class="producto">
-                    <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20210424_225359490.jpg" alt="">
-                    <h2 class="titulo-producto">Marvel</h2>
-                    <p class="descripcion-producto">Descripción del Producto 5.</p>
-                </li>
-                <li class="producto">
-                    <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20211029_205821876.jpg" alt="">
-                    <h2 class="titulo-producto">La granja de Zenón</h2>
-                    <p class="descripcion-producto">Descripción del Producto 6.</p>
-                </li>
-                <li class="producto">
-                    <img class="imagen-tarjeta" src="./imagenes/regalar/20210727_170848.jpg" alt="">
-                    <h2 class="titulo-producto">Catboy</h2>
-                    <p class="descripcion-producto">Descripción del Producto 7.</p>
+                    <p class="descripcion-producto">Un amigurumi de Stitch tejido al crochet es simplemente adorable.
+                        Este personaje de Disney, conocido por su aspecto azul y peludo, cobra vida en forma de una
+                        pequeña criatura mullida y tierna. Con hilos de colores
+                        brillantes y técnicas de crochet, este amigurumi Stitch es un pequeño compañero que seguramente
+                        robará corazones y alegrará cualquier colección de peluches.
+                    </p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/regalar/IMG-20200709-WA0009.jpeg" alt="">
                     <h2 class="titulo-producto">El principito</h2>
-                    <p class="descripcion-producto">Descripción del Producto 8.</p>
+                    <p class="descripcion-producto">Un llavero del Principito tejido al crochet es una obra de arte
+                        minuciosa. Confeccionado con hilos de colores cuidadosamente seleccionados, este pequeño tesoro
+                        representa al Principito. Este llavero es una muestra de habilidad en el crochet, un tributo al
+                        personaje
+                        literario y una forma encantadora de llevarlo contigo a todas partes.
+                    </p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/regalar/IMG-20210117-WA0007.jpeg" alt="">
                     <h2 class="titulo-producto">Groot</h2>
-                    <p class="descripcion-producto">Descripción del Producto 9.</p>
+                    <p class="descripcion-producto">Un llavero de Groot tejido al crochet es una creación asombrosa. Con
+                        hilos de varios tonos de marrón y verde, se forma la figura icónica de Groot, el personaje de
+                        Guardianes de la Galaxia. Este llavero, tejido con amor y
+                        paciencia, captura la esencia de Groot y es una pieza única para cualquier fan de la saga.
+                    </p>
+                </li>
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20210203_101545164.jpg" alt="">
+                    <h2 class="titulo-producto">Los 3 chanchitos</h2>
+                    <p class="descripcion-producto">Los tres cerditos y el lobo tejidos al crochet serían
+                        representaciones encantadoras de este famoso cuento infantil. Estas miniaturas tejidas al
+                        crochet capturarían la esencia de esta historia clásica y serían una forma creativa de narrar el
+                        cuento visualmente. También serían una opción encantadora como juguetes o decoración para
+                        cualquier fanático de los cuentos infantiles.
+                    </p>
+                </li>
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20210424_225359490.jpg" alt="">
+                    <h2 class="titulo-producto">Marvel</h2>
+                    <p class="descripcion-producto">Los personajes de Marvel tejidos al crochet son encantadoras
+                        miniaturas que rinden homenaje a los icónicos superhéroes y villanos del universo Marvel. Cada
+                        personaje está cuidadosamente tejido con hilos de colores para capturar la apariencia y los
+                        detalles distintivos de los personajes. Estas miniaturas tejidas al crochet son una forma
+                        creativa y única de celebrar el mundo de Marvel y llevar a tus personajes favoritos contigo en
+                        cualquier momento.
+                    </p>
+                </li>
+                <li class="producto">
+                    <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20211029_205821876.jpg" alt="">
+                    <h2 class="titulo-producto">La granja de Zenón</h2>
+                    <p class="descripcion-producto">Una granja de Zenón tejida al crochet es una representación
+                        encantadora de este popular mundo animado. Cada elemento de la granja se teje con hilos de
+                        colores vivos para capturar la alegría y vitalidad del programa.
+                        Una granja de Zenón tejida al crochet puede ser un regalo encantador para los fanáticos de
+                        todas las edades.
+                    </p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20200702_101521896.jpg" alt="">
                     <h2 class="titulo-producto">La vecindad del Chavo</h2>
-                    <p class="descripcion-producto">Descripción del Producto 10.</p>
+                    <p class="descripcion-producto">Una representación tejida al crochet de los personajes de la
+                        Vecindad del Chavo, como Quico, la Chilindrina y el Chavo, sería una adición encantadora y
+                        nostálgica para los fanáticos de esta serie icónica. Estas miniaturas tejidas al crochet serían
+                        una forma encantadora de recordar y honrar a estos queridos personajes de la Vecindad del Chavo
+                        y podrían servir como elementos decorativos o juguetes para los fanáticos de la serie.
+                    </p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20201013_145549465.jpg" alt="">
                     <h2 class="titulo-producto">Muñequitas</h2>
-                    <p class="descripcion-producto">Descripción del Producto 11.</p>
+                    <p class="descripcion-producto">Las muñequitas con vestidos de colores tejidas al crochet para
+                        llaveros son creaciones encantadoras y versátiles. Cada muñeca está tejida con detalles precisos
+                        y colores brillantes. Estas muñequitas con vestidos de colores tejidas al crochet serían
+                        perfectas como llaveros, colgantes decorativos o incluso regalos especiales. Son una muestra de
+                        habilidad en el arte del tejido y agregan un toque de encanto y alegría a cualquier lugar
+                        donde se utilicen.
+                    </p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/regalar/IMG-20210216-WA0017.jpg" alt="">
                     <h2 class="titulo-producto">Laboratorio químico</h2>
-                    <p class="descripcion-producto">Descripción del Producto 12.</p>
+                    <p class="descripcion-producto">Los elementos de un laboratorio químico tejidos al crochet serían
+                        representaciones encantadoras y creativas de instrumentos y objetos comunes utilizados en un
+                        entorno de laboratorio. Estos elementos tejidos al crochet en un laboratorio químico serían
+                        piezas decorativas creativas
+                        y educativas, perfectas para decorar el espacio de un amante de la ciencia o como regalos
+                        temáticos para estudiantes de química.
+                    </p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20170607_210745.jpg" alt="">
                     <h2 class="titulo-producto">Albert Einstein</h2>
-                    <p class="descripcion-producto">Descripción del Producto 13.</p>
+                    <p class="descripcion-producto">Un llavero de Albert Einstein tejido al crochet es una pieza
+                        ingeniosa y única. Los hilos de colores cuidadosamente seleccionados se entrelazan
+                        para formar su rostro, y su mirada perspicaz se plasma con precisión. Este llavero tejido
+                        es un tributo creativo a la genialidad de Einstein y una forma encantadora de llevar un toque
+                        de ciencia en tu día a día.
+                    </p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20170711_113552.jpg" alt="">
                     <h2 class="titulo-producto">Patitas</h2>
-                    <p class="descripcion-producto">Descripción del Producto 14.</p>
+                    <p class="descripcion-producto">Unos piececitos simbólicos tejidos al crochet son pequeñas obras de
+                        arte que encarnan la ternura y la habilidad artesanal. Creados con hilos suaves y tejidos con
+                        atención meticulosa, estos piececitos capturan la esencia de la infancia y la fragilidad de los
+                        primeros pasos en la vida. Estos piececitos tejidos son símbolos de amor y cuidado, ideales como
+                        regalos para celebrar la llegada de un bebe.</p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/regalar/IMG_20210208_202001913_HDR.jpg" alt="">
                     <h2 class="titulo-producto">Nene personalizado</h2>
-                    <p class="descripcion-producto">Descripción del Producto 15.</p>
+                    <p class="descripcion-producto">Un nene egresado tejido al crochet para llavero, vestido con la ropa
+                        de su promoción, es un regalo conmovedor y significativo. Este llavero de un nene egresado con
+                        su atuendo de promoción tejido al crochet sería un regalo emotivo y un recordatorio duradero de
+                        un logro educativo significativo en la vida del niño.
+                    </p>
                 </li>
             </ul>
         </section>
