--- a/ParaJugar.html
+++ b/ParaJugar.html
@@ -55,8 +55,8 @@
                     <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20190206_171347.jpg" alt="">
                     <h2 class="titulo-producto">Oso encastrable</h2>
                     <p class="descripcion-producto">Es un juguete encantador que combina la suavidad de un peluche con
-                        la
-                        diversión de encastrarlo. Con sus piezas tejidas a mano, invita a los niños a aprender y jugar
+                        la diversión de encastrarlo. Con sus piezas tejidas a mano, invita a los niños a aprender y
+                        jugar
                         mientras ensamblan este adorable amigo.
                     </p>
                 </li>
@@ -64,45 +64,69 @@
                     <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20190109_121847.jpg" alt="">
                     <h2 class="titulo-producto">Unicornio</h2>
                     <p class="descripcion-producto">Un unicornio tejido al crochet es un mágico y tierno compañero de
-                        peluche
-                        que hará que los corazones de niños y adultos se iluminen. Con su colorido y detallado diseño
-                        tejido a
-                        mano, este unicornio es la perfecta combinación entre lo lúdico y lo artesanal. Un regalo que
-                        despierta
-                        sonrisas y fantasía.
+                        peluche que hará que los corazones de niños y adultos se iluminen. Con su colorido y detallado
+                        diseño
+                        tejido a mano, este unicornio es la perfecta combinación entre lo lúdico y lo artesanal. Un
+                        regalo que
+                        despierta sonrisas y fantasía.
                     </p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20200705_183021333.jpg" alt="">
                     <h2 class="titulo-producto">Unicornio</h2>
                     <p class="descripcion-producto">Este adorable unicornio tejido al crochet es más encantador gracias
-                        a su
-                        vincha de flores. Sus colores suaves y la delicada elaboración a mano hacen que este unicornio
-                        sea una
-                        verdadera obra de arte. Sus flores aportan un toque de color y elegancia, convirtiéndolo en el
-                        compañero
-                        perfecto para quienes buscan un toque de magia y belleza en sus vidas.
+                        a su vincha de flores. Sus colores suaves y la delicada elaboración a mano hacen que este
+                        unicornio
+                        sea una verdadera obra de arte. Sus flores aportan un toque de color y elegancia, convirtiéndolo
+                        en el
+                        compañero perfecto para quienes buscan un toque de magia y belleza en sus vidas.
                     </p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/jugar/CAM00637.jpg" alt="">
                     <h2 class="titulo-producto">Animales Varios</h2>
-                    <p class="descripcion-producto">Descripción del Producto 4.</p>
+                    <p class="descripcion-producto">Los animales tejidos al crochet diseñados para llaveros son
+                        encantadoras miniaturas que capturan la esencia de la fauna en un formato compacto y decorativo.
+                        Cada animal es tejido con hilos de colores que imitan la apariencia real de la especie, lo que
+                        los hace fácilmente reconocibles.
+
+                        Estos llaveros de animales tejidos son una forma maravillosa de expresar tu amor por la
+                        naturaleza y la creatividad en tu vida
+                        cotidiana, además de ser funcionales al mantener tus llaves organizadas y
+                        fácilmente identificables.
+                    </p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/jugar/20210709_011651.jpg" alt="">
                     <h2 class="titulo-producto">Pulpo reversible</h2>
-                    <p class="descripcion-producto">Descripción del Producto 5.</p>
+                    <p class="descripcion-producto">El pulso reversible feliz es una pieza
+                        de diseño única y expresiva. Elaborado con hilos de colores brillantes y oscuros.
+                        Tiene una carita feliz con ojos brillantes y sonriente. El
+                        tejido reversible permite al usuario mostrar su estado de ánimo o personalidad, alternando entre
+                        las dos emociones según el día o la ocasión. Es una forma creativa y divertida de expresar
+                        sentimientos a travé de la moda.
+                    </p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/jugar/20210709_011617.jpg" alt="">
                     <h2 class="titulo-producto">Pulpo reversible</h2>
-                    <p class="descripcion-producto">Descripción del Producto 6.</p>
+                    <p class="descripcion-producto">Un pulso reversible triste es una pieza
+                        de diseño única y expresiva. Elaborado con hilos de colores brillantes y oscuros. Tiene una
+                        carita triste con cejas fruncidas y una boca hacia abajo. El
+                        tejido reversible permite al usuario mostrar su estado de ánimo o personalidad, alternando entre
+                        las dos emociones según el día o la ocasión. Es una forma creativa y divertida de expresar
+                        sentimientos a través de la moda.
+                    </p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20200831_213821447.jpg" alt="">
                     <h2 class="titulo-producto">Llamitas</h2>
-                    <p class="descripcion-producto">Descripción del Producto 7.</p>
+                    <p class="descripcion-producto">Las llamitas tejidas al crochet son creaciones adorables. Están
+                        confeccionadas con hilos de lana suave en colores como blanco, marrón o beige para capturar la
+                        apariencia lanuda de una llama real. Estas llamitas tejidas son peluches encantadores y
+                        populares
+                        en la comunidad de tejido al crochet, ideales para decorar habitaciones infantiles o para
+                        regalar a cualquier amante de los animales adorables.</p>
                 </li>
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20210622_201224351.jpg" alt="">
@@ -135,9 +159,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
