--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styleInicio.css">
     <title>Amigu-arte</title>
 </head>
 
@@ -46,11 +47,36 @@
             </div>
         </div>
     </nav>
+    <h1>Amigu-arte</h1>
     <main>
-        <h1>Amigu-arte</h1>
         <div class="image-container">
             <img src="./imagenes/logos/e7c4c1b765fed27981a73e87f1a71f1b-removebg.png" alt="" class="logo-controlado">
         </div>
+        <section>
+            <h2>Los mas visto</h2>
+            <div class="container-tarjeta">
+                <div class="tarjeta-inicio">
+                    <img src="./imagenes/hogar/IMG_20170910_114352.jpg" alt="">
+                    <h3>Alfileteros en forma de comida</h3>
+                    <a class="boton-tarjeta" href="./ParaHogar.html">Ir a Para el hogar</a>
+                </div>
+                <div class="tarjeta-inicio">
+                    <img src="./imagenes/jugar/IMG_20190109_121847.jpg" alt="Unicornio">
+                    <h3>Unicornio </h3>
+                    <a class="boton-tarjeta" href="./ParaJugar.html">Ir a Para jugar</a>
+                </div>
+                <div class="tarjeta-inicio">
+                    <img src="./imagenes/belleza/AirBrush_20210129051202.jpg" alt="">
+                    <h3>Discos Desmaquillantes</h3>
+                    <a class="boton-tarjeta" href="./ParaBelleza.html">Ir a Para mi belleza</a>
+                </div>
+                <div class="tarjeta-inicio">
+                    <img src="./imagenes/regalar/IMG-20200709-WA0009.jpeg" alt="El principito">
+                    <h3>El Principito</h3>
+                    <a class="boton-tarjeta" href="./ParaRegalar.html">Ir a Para Regalar</a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="container">
@@ -75,9 +101,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
