Página Web Amigu-arte

--- a/Conoceme.html
+++ b/Conoceme.html
@@ -49,10 +49,10 @@
     <h1 class="titulos-pequeños">Tejiendo Sueños: Mi Viaje en el Mundo del Crochet</h1>
     <main>
         <section>
-            <div class="image-container">
-                <img src="./imagenes/logos/5387666-removebg-preview.png" alt="" class="imagen-controlada">
+            <div class="image-container ">
+                <img src="./imagenes/logos/5387666-removebg-preview.png" alt="" class="imagen-controlada transformado img-transformado">
             </div>
-            <p>
+            <p >
                 ¡Hola! Soy Rocío, y desde que tengo memoria las agujas y los hilos han sido mis compañeros más fieles.
                 Tejer es
                 más que una
