--- a/Contactame.html
+++ b/Contactame.html
@@ -57,7 +57,7 @@
             </p>
             <div class="image-container">
                 <img src="./imagenes/logos/concepto-estancia-casa-rutina-diurna-chica-que-trabaja-casa-gato_564312-213-removebg-preview.png"
-                    alt="" class="imagen-controlada">
+                    alt="" class="imagen-controlada transformado img-transformado">
             </div>
 
             <p>
