--- a/ParaJugar.html
+++ b/ParaJugar.html
@@ -97,7 +97,7 @@
                     </p>
                 </li>
                 <li class="producto">
-                    <img class="imagen-tarjeta" src="./imagenes/jugar/20210709_011651.jpg" alt="">
+                    <img class="imagen-tarjeta" src="./imagenes/jugar/20231030_213430.jpg" alt="">
                     <h2 class="titulo-producto">Pulpo reversible</h2>
                     <p class="descripcion-producto">El pulso reversible feliz es una pieza
                         de diseño única y expresiva. Elaborado con hilos de colores brillantes y oscuros.
@@ -108,7 +108,7 @@
                     </p>
                 </li>
                 <li class="producto">
-                    <img class="imagen-tarjeta" src="./imagenes/jugar/20210709_011617.jpg" alt="">
+                    <img class="imagen-tarjeta" src="./imagenes/jugar/20231030_213310.jpg" alt="">
                     <h2 class="titulo-producto">Pulpo reversible</h2>
                     <p class="descripcion-producto">Un pulso reversible triste es una pieza
                         de diseño única y expresiva. Elaborado con hilos de colores brillantes y oscuros. Tiene una
@@ -131,7 +131,11 @@
                 <li class="producto">
                     <img class="imagen-tarjeta" src="./imagenes/jugar/IMG_20210622_201224351.jpg" alt="">
                     <h2 class="titulo-producto">Animales varios</h2>
-                    <p class="descripcion-producto">Descripción del Producto 8.</p>
+                    <p class="descripcion-producto">Los animales de la selva tejidos al crochet pueden ser excepcionalmente tiernos y adecuados para una niña. El
+                        tejido al crochet agrega una dimensión especial de suavidad y ternura a estas creaciones, lo que
+                        los convierte en regalos perfectos para los más pequeños. Los detalles cariñosos, como las expresiones amigables y
+                        las pequeñas flores, hacen que estos animalitos sean aún más encantadores y adorables.
+                    </p>
                 </li>
             </ul>
         </section>
